<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wilki.tica.activities.TaskOptionsActivity">

    <TextView
        android:text="@string/task_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:textSize="80sp"
        android:id="@+id/taskSettingsTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <Button
        android:layout_width="550dp"
        android:layout_height="110dp"
        android:layout_below="@+id/taskSettingsTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/create_task_btn"
        android:layout_marginTop="50dp"
        android:onClick="createNewTask"
        android:background="@drawable/create_new_task_button"/>

    <Button
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_below="@+id/create_task_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/view_task_data_btn"
        android:onClick="viewTaskData"
        android:background="@drawable/task_performance_button"/>

    <Button
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_below="@+id/view_task_data_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/SQLite2Excel"
        android:onClick="ExportSqLitetoExel"
        android:background="@drawable/export_excl_btn"/>

    <Button
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_below="@+id/SQLite2Excel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/main_menu_btn"
        android:onClick="returnToMainMenu"
        android:background="@drawable/main_menu_s_button"/>

</RelativeLayout>
