...
            android:textSize="@dimen/bottom_navigation_icon"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>
        <Button
            android:id="@+id/button3"
            android:layout_gravity="center"
            android:layout_width="400dp"
            android:layout_height="110dp"
            android:layout_weight="0"
            android:background="@drawable/button"
            android:onClick="taskMenu" />
...
