<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_task_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wilki.tica.activities.ViewTaskPerformanceDataActivity">

    <TextView
        android:id="@+id/taskPerformanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:includeFontPadding="true"
        android:text="@string/task_performance_title"
        android:textSize="80sp" />

    <TextView
        android:text="@string/tap_a_task_for_a_detailed_break_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskPerformanceTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/taskPerformanceDetails"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/taskPerformanceDetails"
        android:id="@+id/header"
        android:background="@android:color/white">
        <TextView
            android:text="@string/session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>

        <TextView
            android:text="@string/task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>

        <TextView
            android:text="@string/task_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"/>

        <TextView
            android:text="@string/attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp"/>

        <TextView
            android:text="@string/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp"/>

        <TextView
            android:text="@string/interface_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp"/>

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallFont"
            android:layout_marginLeft="43dp"
            android:layout_marginStart="43dp"/>


    </LinearLayout>

    <ListView
        android:layout_below="@+id/header"
        android:layout_above="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listViewPerformance"
        android:background="@android:color/white">


    </ListView>

    <Button
        android:layout_width="550dp"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="returnToTaskMenu"
        android:id="@+id/button"
        android:background="@drawable/task_options_btn"
        />

    <Button
        android:layout_width="550dp"
        android:layout_height="110dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="clearPerformanceData"
        android:id="@+id/button2"
        android:background="@drawable/delete_data_button"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
